--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
      <script src="script.js"></script>
    </head>
    <body>
-     <!-- Name: Sunaly Hatharasinghe - This page was created as practice for COMP290 -->
+       <h1>Name: Sunaly Hatharasinghe</h1>
+       <p>This page was created as practice for COMP290</p>
    </body>
 </html>
 
